# tsMuxer

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  COMPILING.md  Error Code 11  README.md  bintray_nightly_check.sh  bintray_nightly_upload.sh  build_gui_winxp.bat  build_macos_native.sh  msys2.sh  rebuild_linux.sh  rebuild_linux_docker.sh  rebuild_linux_with_gui.sh  rebuild_linux_with_gui_docker.sh  rebuild_msys2.sh  rebuild_mxe.sh  rebuild_mxe32_with_gui_docker.sh  rebuild_mxe_docker.sh  rebuild_mxe_with_gui.sh  rebuild_mxe_with_gui_docker.sh  rebuild_osxcross.sh  rebuild_osxcross_docker.sh  rebuild_osxcross_with_gui.sh  rebuild_osxcross_with_gui_docker.sh
.github/workflows/: ccpp.yml  code-style.yml  linux.yml  mac.yml  mac11_native.yml  mac_arm64.yml  mac_native.yml  nightly-docker.yml  nightly-mac-native.yml  nightly.yml  nightly_check.sh  obs_trigger.sh  qt6_test.sh  qt6_test.yml  windows.yml  windows_32.yml  windows_64.yml  windows_xp_gui.yml
docs/: COMPILING.md  INSTALLATION.md  TESTING.md  USAGE.md
libmediation/: CMakeLists.txt  Makefile  Makefile.mac  libmediationlight.vcproj  libmediationlight.vcxproj  libmediationlight.vcxproj.filters
libmediation/containers/: safequeue.h
libmediation/fs/: directory.cpp  directory.h  directory_priv.h  file.h  logstream.h  systemlog.h  textfile.h
libmediation/fs/osdep/: directory_unix.cpp  directory_win32.cpp  file_unix.cpp  file_win32.cpp
libmediation/system/: condvar.h  mutex.h  terminatablethread.cpp  terminatablethread.h
libmediation/system/osdep/: common_win32.cpp  common_win32.h  condvar_linux.cpp  condvar_win32.cpp  mutex_linux.cpp  mutex_win32.cpp  terminatablethread_linux.cpp  terminatablethread_win32.cpp
libmediation/time/: time.cpp  time.h
libmediation/types/: types.cpp  types.h
scripts/: build_gui_winxp.bat  build_macos_arm64.sh  build_macos_native.sh  macos_common_build.sh  rebuild_linux.sh  rebuild_linux_with_gui_docker.sh  rebuild_mxe.sh  rebuild_mxe32_docker.sh  rebuild_mxe32_with_gui_docker.sh  rebuild_mxe_docker.sh  rebuild_mxe_with_gui.sh  rebuild_mxe_with_gui_docker.sh  rebuild_osxcross_docker.sh  rebuild_osxcross_with_gui_docker.sh
tsMuxer/: AbstractDemuxer.cpp  BufferedReader.h  CMakeLists.txt  Makefile  Makefile.mac  README.md  aac.cpp  aac.h  aacStreamReader.cpp  aacStreamReader.h  abstractDemuxer.cpp  abstractDemuxer.h  abstractMuxer.cpp  abstractMuxer.h  abstractReader.h  abstractStreamReader.h  abstractreader.h  ac3Codec.cpp  ac3Codec.h  ac3StreamReader.cpp  ac3StreamReader.h  avCodecs.cpp  avCodecs.h  avPacket.h  base64.cpp  bitStream.cpp  bitStream.h  blank_patterns.h  blurayHelper.cpp  blurayHelper.h  bswap.h  bufferedFileReader.cpp  bufferedFileReader.h  bufferedFileWriter.cpp  bufferedFileWriter.h  bufferedRandomAccessReader.h  bufferedReader.cpp  bufferedReader.h  bufferedReaderManager.cpp  bufferedReaderManager.h  (+93 more)
tsMuxer/osdep/: textSubtitlesRenderFT.cpp  textSubtitlesRenderFT.h  textSubtitlesRenderWin32.cpp  textSubtitlesRenderWin32.h
tsMuxer/src/: AbstractDemuxer.cpp  BufferedReader.h  aac.h  aacStreamReader.cpp  abstractCoreContext.h  abstractDemuxer.h  abstractMuxer.cpp  abstractStreamReader.h  abstractVideoDecoder.h  ac3Codec.cpp  ac3Codec.h  ac3StreamReader.cpp  avCodecs.h  base64.h  bitStream.h  bitstream.h.ffmpeg  blank_patterns.h  blurayHelper.cpp  bufferedFileReader.h  bufferedFileWriter.h  bufferedReader.cpp  bufferedReaderManager.h  combinedH264Demuxer.cpp  crc.cpp  crc.h  crc32.h  dtsStreamReader.cpp  dtsStreamReader.h  dvbSubStreamReader.cpp  h264StreamReader.cpp  hevc.h  hevcStreamReader.h  ioContextDemuxer.h  iso_writer.cpp  lpcmStreamReader.cpp  lpcmStreamReader.cpp.orig  lpcmStreamReader.h  main.cpp  main.cpp.orig  matroskaDemuxer.cpp  (+49 more)
tsMuxer/src/osdep/: textSubtitlesRenderFT.h  textSubtitlesRenderWin32.h
tsMuxer/unused/: vodCoreContext.cpp
tsMuxerGUI/: CMakeLists.txt  Joining Files But Finishing WithError Code 11  checkboxedheaderview.cpp  checkboxedheaderview.h  codecinfo.h  convert.bat  fontsettingstablemodel.cpp  fontsettingstablemodel.h  icon.rc  images.qrc  lang_codes.cpp  lang_codes.h  main.cpp  muxForm.cpp  muxForm.h  muxForm.ui  translations.qrc  tsMuxerGUI.desktop  tsMuxerGUI.icns  tsMuxerGUI.pro  tsMuxerGUI.sln  tsmuxerwindow.cpp  tsmuxerwindow.h  tsmuxerwindow.ui  ui_muxForm.h  ui_tsmuxerwindow.h
tsMuxerGUI/translations/: about_de.html  about_en.html  about_es.html  about_fr.html  about_he.html  about_ru.html  about_zh.html  tsmuxergui_de.ts  tsmuxergui_en.ts  tsmuxergui_es.ts  tsmuxergui_fr.ts  tsmuxergui_he.ts  tsmuxergui_ru.ts  tsmuxergui_zh.ts
tsMuxerGUI/translations/tsMuxerGUI/translations/: tsmuxergui_ru.ts
